同步于: 10月18日0时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,53 +1,53 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
-#### [ 二十大开幕式 4名中共元老不知所踪(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019242.md)
-#### [ 戳破习的皇帝梦？北京四通桥事件冲击二十大(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019186.md)
-#### [ 二十大开幕 习近平任报告起草组组长等同宣告连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019235.md)
-#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
-#### [ 十年一梦同归殊途 二十大泽国江山入战图(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018712.md)
-#### [ 深陷性丑闻的张高丽二十大露面 依然“扑克脸”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019260.md)
 #### [ 美媒揭秘：习近平靠这个手段消除连任阻力(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019310.md)
-#### [ 胡海峰赴京参加二十大 这回离升官不远了？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019171.md)
-#### [ 央视惊现罕见一幕专家：习近平以奇怪的方式被劫持(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019166.md)
-#### [ 王岐山出访哈萨克 提前泄露二十大内情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019099.md)
-#### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
-#### [ 中央军委换血过半“新军头”浮出水面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019076.md)
-#### [ 四通桥事件后 中共20大北京出现最新风景(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019227.md)
-#### [ 中联部前部长宋涛重返外事办 锁定副国级？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019167.md)
-#### [ 【快讯】二十大开幕 习近平做报告 王岐山出席 江泽民呢？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662706.md)
-#### [ 二十大抗议声中登场 张高丽陷性丑闻后首露面](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846359.md)
-#### [ 二十大内斗中开场 习扶胡锦涛就座 江泽民消失](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552745.md)
-#### [ 分析：习近平似大权在握 难掩党内斗争激烈](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846220.md)
-#### [ 北京四通桥事件发酵 大陆多地惊现雷同标语(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019256.md)
-#### [ 上海大学退休教师转发反习标语 被警察带走](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846408.md)
-#### [ 四通桥事件震动新老权贵 二十大成火山口？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13846024.md)
+#### [ 深陷性丑闻的张高丽二十大露面 依然“扑克脸”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019260.md)
+#### [ 二十大开幕式 4名中共元老不知所踪(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019242.md)
+#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
+#### [ 二十大开幕 习近平任报告起草组组长等同宣告连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019235.md)
+#### [ 戳破习的皇帝梦？北京四通桥事件冲击二十大(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019186.md)
 #### [ 习近平二十大报告89次提“安全”释信号(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019325.md)
-#### [ 二十大 习近平即使连任也难甩掉五大困局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13846189.md)
-#### [ 章天亮: 四通桥事件后 传言习裸退 王岐山泄露习真正动向](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662628.md)
-#### [ 中共二十大开幕 李克强有气无力 习近平露疲病之态 王丹：值得关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662766.md)
+#### [ 十年一梦同归殊途 二十大泽国江山入战图(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018712.md)
 #### [ 二十大习做报告期间 胡春华离场至少5分钟](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846951.md)
 #### [ 【新闻看点】习近平显疲态微咳？李瑞环冷漠](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846787.md)
+#### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 习近平二十大讲话多次清嗓子 引外媒关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846699.md)
-#### [ 二十大序幕拉开 推特传二十大出大事了！大陆多地现“四通桥标语”海内外响应彭立发](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662667.md)
-#### [ 中共政治局半数换血 台媒预测新晋人员名单](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552256.md)
-#### [ 北京巨幅让中共审查杀红眼 海外声援遍地开花(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019211.md)
-#### [ 【热门话题】法学教授叫板习/魔戒剧透中共结局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552738.md)
-#### [ 失宠于习近平？“之江新军”落选中央委员(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019066.md)
+#### [ 胡海峰赴京参加二十大 这回离升官不远了？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019171.md)
 #### [ 【天亮时分】20大主席团常委名单 习成少数派？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846673.md)
 #### [ 章天亮: 20大主席团常委名单曝光 习近平成少数派？谁能入常？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662805.md)
 #### [ 习近平清洗党内所有潜在势力 王岐山受波及](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846782.md)
-#### [ 传山东大学陪黑人留学生3个月的女生全部打胎(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019179.md)
-#### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
-#### [ 北京四通桥事件赌上一切 矢板明夫：中国底层民众心声(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019229.md)
-#### [ 分析：20大后 习近平不太可能纠正经济路线](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845672.md)
-#### [ 【老北京茶馆】彭载舟标语传全世界 党彻底慌了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846293.md)
-#### [ 网文：财富将重新分配 他们正排队离场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552494.md)
+#### [ 中共二十大开幕 李克强有气无力 习近平露疲病之态 王丹：值得关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662766.md)
 #### [ 习近平二十大报告现异常 内容压缩 多次轻咳喝水](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103553109.md)
+#### [ 北京四通桥事件发酵 大陆多地惊现雷同标语(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019256.md)
 #### [ 王友群：习“三连任”有望 但前程凶险](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846785.md)
-#### [ 【菁英论坛】二十大前摊牌 四通桥现反共义旗](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13846297.md)
-#### [ 【秦鹏直播】法学教授叫板习 吁解除防疫措施](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846298.md)
-#### [ 二十大报告50次提到“安全” 民众：中共提心吊胆](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846613.md)
-#### [ 分析：二十大报告无新意 难抵四通桥抗议效应](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846571.md)
-#### [ 张高丽现身二十大开幕式 性侵丑闻再引关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552820.md)
 #### [ 中共二十大召开日 洛城民众声援四通桥勇士](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846810.md)
-#### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
+#### [ 央视惊现罕见一幕专家：习近平以奇怪的方式被劫持(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019166.md)
+#### [ 习近平二十大报告 各国专家学者怎么看？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103553021.md)
+#### [ 中共20大召开第一天 传北京厕所内再现反党标语](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552933.md)
+#### [ 分析：20大后 习近平不太可能纠正经济路线](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13845672.md)
+#### [ 【直播】台国策院座谈：中共二十大与习近平观察](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846862.md)
 #### [ 习近平二十大讲话 跟十九大相比有两大变化](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846624.md)
+#### [ 二十大内斗中开场 习扶胡锦涛就座 江泽民消失](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552745.md)
+#### [ 支持四通桥勇士 荷兰华人打出抗共横幅](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846812.md)
+#### [ 习近平能谋得三连任 却深陷五大困局(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019334.md)
+#### [ 中共二十大 军方代表团现变化 武警代表团消失](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103553274.md)
+#### [ 二十大后中共内斗更激烈 习称应对“惊涛骇浪”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103553246.md)
+#### [ 【热门话题】法学教授叫板习/魔戒剧透中共结局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552738.md)
+#### [ 习近平二十大再提不排除武统台湾 引发关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846780.md)
+#### [ 【禁闻】中共二十大登场 张高丽陷性丑闻后首露面](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103552915.md)
+#### [ 王岐山出访哈萨克 提前泄露二十大内情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019099.md)
+#### [ 中央军委换血过半“新军头”浮出水面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019076.md)
+#### [ 习近平二十大报告 中共只关心一件事](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662856.md)
+#### [ 【热门话题】二十大武警代表团消失/传北京厕所内再现反党标语](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103553272.md)
+#### [ 习近平二十大：“坚持动态清零不动摇”外资悲观 矢板明夫：或成为中共的定时炸弹](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662808.md)
+#### [ 四通桥事件后 中共20大北京出现最新风景(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019227.md)
+#### [ 杨威：中共二十大向全世界展示了什么？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13846948.md)
+#### [ 二十大报告50次提“安全” 民众：中共心不安](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13846613.md)
+#### [ 中共二十大登场 外媒分析习近平五大困局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103553030.md)
+#### [ 二十大报告50次提到“安全” 民众：中共提心吊胆](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846613.md)
+#### [ 【快讯】二十大开幕 习近平做报告 王岐山出席 江泽民呢？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662706.md)
+#### [ 中联部前部长宋涛重返外事办 锁定副国级？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019167.md)
+#### [ 北京再现反习标语！四通桥勇士效应扩大！](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662721.md)
+#### [ 中共20大首日北京7个区沦疫 疫情已遍及13区(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019282.md)
+#### [ 传郑州疫情大爆发 “白天零增加，晚上偷偷拉”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019276.md)
+#### [ 【大陆疫情更新10.04】徐州新娘被“清零” 内蒙古书记“杀鸡用牛刀”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103543040.md)
+#### [ 四通桥事件震动新老权贵 二十大成火山口？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13846024.md)
