--- a/pages/nsc413/n13846951.md
+++ b/pages/nsc413/n13846951.md
@@ -10,9 +10,21 @@
  中共政治局委员胡春华。(Feng Li/Getty Images)
 </div></div><hr/>
 
-#### [ 🎬  免翻墙浏览墙外禁闻、观看YouTube热门视频及电视直播](https://github.com/gfw-breaker/HelloWorld)
 
-#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
+
+#### [ 🎬  《超越恐惧：高智晟律師的故事》](http://129.153.61.140:10000/videos/res1/709/?378838)
+
+#### [ 🎬 《红墙的记忆》— 中南海万人和平上访纪实](http://129.153.61.140:10000/videos/res2/legend/?378838)
+
+#### [ 🎬 《伪火》- 天安门自焚真相](http://129.153.61.140:10000/videos/blog/?378838)&nbsp; | &nbsp;[《六月黑夜》- 六四天安门大屠杀](http://129.153.61.140:10000/videos/88/?378838)
+
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理 ...）](http://129.153.61.140:81/youtube.html?378838)
+
+#### [ 🔥  毛泽东私人医生李志绥曝光毛主席淫乱](http://129.153.61.140:10000/videos/res/Communist/?378838)
+
+#### [ 🔥  2014年辛灝年纪念《九评共产党》十周年演讲](http://129.153.61.140:10000/videos/res/jiuping/?378838)
+
+
 
 <div><p>
  【大纪元2022年10月17日讯】北京四通桥惊现反习横幅抗议事件三天后，中共二十大16日上午开幕。在现场的外媒记者捕捉到会场的一些“花絮”，包括胡春华在习近平做报告期间离场至少5分钟。
